--- a/erb/gitconfig.erb
+++ b/erb/gitconfig.erb
@@ -2,7 +2,8 @@
 	name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
 	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 [alias]
-	last = cat-file commit HEAD
+   last = cat-file commit HEAD
+   graph = log --graph
 [color]
    ui = true
 [core]
